添加自定义加载器